[package]
name = "fastgif"
version = "0.1.0"
edition = "2024"
authors = ["dangered wolf"]
description = "A service that converts Twitter video URLs to GIFs"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
axum = "0.7"
hyper = { version = "1.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
gifski = "1.12"
tempfile = "3.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
futures = "0.3"
reqwest = { version = "0.11", features = ["stream"] }
lru = "0.12"
