[package]
name = "fastgif"
version = "0.1.0"
edition = "2024"
authors = ["dangered wolf"]
description = "A service that converts Twitter video URLs to GIFs"

[dependencies]
tokio = { version = "1.34", features = ["rt-multi-thread", "net", "process", "io-util"] }
axum = { version = "0.7", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.5"
