[package]
name = "fastgif"
version = "0.1.0"
edition = "2024"
authors = ["dangered wolf"]
description = "A service that converts Twitter video URLs to GIFs"

[dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "net", "process", "io-util"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
anyhow = { version = "1.0", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.10"
